# divesite-species-analytics

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dbt  Dockerfile.dbt.dockerignore  Dockerfile.enrich  Dockerfile.enrich.dockerignore  Dockerfile.ingest  Dockerfile.ingest.dockerignore  LICENSE  Makefile  README.md  SECURITY.md  TESTING.md  convert_timezone.py  dive_sites.csv  docker-compose.yml  dwca.ipynb  entrypoint.sh  env.example  env.sample  gbif_media.py  invasive_species.csv  metadata.yaml  obis.ipynb  obis_data.ipynb  obis_data.py  obis_data_schema.py  padi_divesites.ipynb  pyproject.toml  requirements-dev.txt  requirements-enrich.txt  requirements-ingest.txt  requirements.txt  run.py  spark_reformat_csv.py  (+2 more)
custom/: async_load_divesites.py  enrich_with_images.py
data_exporters/: store_obis_gcs.py  store_obis_gcs_py.py
data_loaders/: divesites.py  download_obis.py  invasive_species.py  load_spark.py  obis_download.py  redlist_species.py  reef_check_data.py  thrilling_sword.py
dbt/: .user.yml  packages.yml  profiles.yml
dbts/: stage_redlist_species_model.yaml
docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  LOCAL_DATA_WORKFLOW.md  SETUP.md  TESTING.md  architecture.excalidraw  catalog.json  manifest.json
documentation/: manifest.json  setup.md
enrich/: __main__.py  config.py  gbif.py  wikidata.py  wikipedia.py
ingest/: __main__.py  config.py  download.py  dwca.py  upload.py
marine_data/: dbt_project.yml  divesites.parquet  profiles.yml
orchestration/: io_config.yaml  metadata.yaml
scripts/: build_and_push.sh  obis_data.ipynb  padi_divesites.ipynb  test_knowledge_graph.py
terraform/: main.tf  (+5 more)
(+308 files in other folders)
