[project]
name = "marine-species-analytics"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Shared
    "pandas",
    "pyarrow",
    "aiohttp",
    "google-cloud-storage",
    # Ingest
    "python-dwca-reader",
    "boto3",
    "duckdb",
    "requests",
    "python-dateutil",
    "tqdm",
    # Enrich
    "google-cloud-bigquery",
    "db-dtypes",
]

[project.optional-dependencies]
app = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]
dev = [
    "ruff",
    "pyrefly",
    "pre-commit",
    "pytest",
    "httpx",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["ingest", "enrich", "app/backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyrefly]
project-includes = ["ingest/", "enrich/", "app/backend/"]
project-excludes = [".venv/"]
python-version = "3.11"
